name:                postgrest-oauth
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/nblumoe/postgrest-oauth#readme
license:             BSD3
license-file:        LICENSE
author:              Nils Blum-Oeste
maintainer:          nils@blum-oeste.de
copyright:           2016 Nils Blum-Oeste
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable postgrest-oauth
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
