name:                postgrest-oauth
version:             0.1.0.0
synopsis:            OAuth2 WAI middleware for PostgREST
description:         Please see README.md
homepage:            https://github.com/nblumoe/postgrest-oauth#readme
license:             BSD3
license-file:        LICENSE
author:              Nils Blum-Oeste
maintainer:          nils@blum-oeste.de
copyright:           2016 Nils Blum-Oeste
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
 hs-source-dirs:     src
 exposed-modules:    PostgRESTOAuth
 ghc-options:        -Wall
 build-depends:      base >= 4.7 && < 5
                   , bytestring
                   , hasql-pool
                   , hoauth2
                   , http-conduit
                   , http-types
                   , postgresql-libpq
                   , postgrest >= 0.3 && < 0.4
                   , string-conversions
                   , time
                   , wai
                   , warp
                   , word8
 default-language:   Haskell2010
 default-extensions: OverloadedStrings
 other-modules:      Keys

executable postgrest-oauth
  hs-source-dirs:      app
  ghc-options:         -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hasql-pool
                     , hoauth2
                     , http-conduit
                     , http-types
                     , postgresql-libpq
                     , postgrest >= 0.3 && < 0.4
                     , postgrest-oauth
                     , string-conversions
                     , time
                     , wai
                     , warp
                     , word8
  default-extensions: OverloadedStrings
